--- a/unpersonalisiert/index.html
+++ b/unpersonalisiert/index.html
@@ -7,6 +7,8 @@
             <div class="slack grid-item">
                 <div class="grid-item-title">
                     Slack
+                    <iframe src="https://openknowledgegermany.slack.com/messages/C0BUT6TJ4/" scrolling="no">Iframes not supported</iframe>
+                    <!--<iframe src="https://openknowledgegermany.slack.com/messages/C0BUT6TJ4/" style="border:0px #ffffff none;" name="myiFrame" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="400px" width="600px" allowfullscreen></iframe>-->
                 </div>
             </div>
             <div class="headline grid-item">
@@ -23,9 +25,9 @@
                 <div class="grid-item-title">
                     Hackdash
                 </div>
-                <!--
+
                 <iframe allowtransparency="true" frameborder="0" height="100%" src="https://hackdash.org/embed/dashboards/jhackt2018?hide=title,pacnbar,desc,&sort=showcase" title="Hackdash" width="100%">
-                </iframe>-->
+                </iframe>
             </div>
             <div class="instagram grid-item">
                 <div class="grid-item-title">
