--- a/website/index.html
+++ b/website/index.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
+      <link rel="stylesheet" type="text/css" href="index.css">
     </head>
     <body>
         <div class="grid-container">
             <div class="slack grid-item">
                 <div class="grid-item-title">
                     Slack
-                    <iframe src="https://openknowledgegermany.slack.com/messages/C0BUT6TJ4/" scrolling="no">Iframes not supported</iframe>
-                    <!--<iframe src="https://openknowledgegermany.slack.com/messages/C0BUT6TJ4/" style="border:0px #ffffff none;" name="myiFrame" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="400px" width="600px" allowfullscreen></iframe>-->
                 </div>
             </div>
             <div class="headline grid-item">
-                <div class="grid-item-title">
-                    JUGEND DASHT
-                </div>
+                JUGEND DASHT
             </div>
             <div class="calender grid-item">
                 <div class="grid-item-title">
@@ -25,7 +22,6 @@
                 <div class="grid-item-title">
                     Hackdash
                 </div>
-
                 <iframe allowtransparency="true" frameborder="0" height="100%" src="https://hackdash.org/embed/dashboards/jhackt2018?hide=title,pacnbar,desc,&sort=showcase" title="Hackdash" width="100%">
                 </iframe>
             </div>
@@ -47,44 +43,3 @@
         </div>
     </body>
 </html>
-<style>
-    body {
-  padding: 0;
-  margin: 0;
-  height: 100%;
-  font-family: Helvetica;
-  background-color: lightgrey;
-}
-.grid-container {
-  position: fixed;
-  display: grid;
-  grid-template-columns: 25% 50% 25%;
-  grid-template-rows: 10% 30% 30% 30%;
-  grid-column-gap: 2px;
-  grid-row-gap: 2px;
-  height: 100%;
-  width: 100%;
-}
-.grid-item {
-  background-color: rgba(255, 255, 255, 0.8);
-  text-align: center;
-  padding: 20px 0;
-  font-size: 25px;
-}
-.grid-item-title {
-
-}
-.slack {
-  grid-area: 1 / 1 / 5 / 2;
-}
-
-.twitter {
-  grid-area: 1 / 3 / 5 / 5;
-
-}
-
-.headline {
-    font-weight: bold;
-
-}
-</style>
