Erste Anfaenge fuer Twitter Feed
lol

--- a/website/index.html
+++ b/website/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
       <link rel="stylesheet" type="text/css" href="index.css">
+      <script type="text/javascript" href="js/twitter.js"></script>
+      <script type="text/javascript" href="js/twitter_implementation.js"></script>
     </head>
     <body>
         <div class="grid-container">
@@ -30,7 +32,7 @@
                     Instagram
                 </div>
             </div>
-            <div class="twitter grid-item">
+            <div class="twitter grid-item" id="twitter-feed">
                 <div class="grid-item-title">
                     Twitter
                 </div>
