--- a/website/index.html
+++ b/website/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <link rel="stylesheet" type="text/css" href="index.css">
+        <link href="index.css" rel="stylesheet" type="text/css">
+        </link>
+        <script crossorigin="anonymous" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" src="https://code.jquery.com/jquery-3.3.1.js">
+        </script>
     </head>
     <body>
         <div class="grid-container">
-            <div class="slack grid-item">
-                <div class="grid-item-title">
-                    Slack
-                </div>
-            </div>
             <div class="headline grid-item">
                 JUGEND DASHT
+                <img class="headline-image" src="Jugend_dasht.png">
+                </img>
             </div>
             <div class="calender grid-item">
                 <div class="grid-item-title">
