--- a/website/Timeline-Slider-jQuery-Timespace/example.html
+++ b/website/Timeline-Slider-jQuery-Timespace/example.html
@@ -3,7 +3,6 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<title>jQuery Timespace Plugin Examples</title>
   <link href="https://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
 
 	<link href="css/jquery.timespace.dark.css?v2" rel="stylesheet">
@@ -12,58 +11,41 @@
 </head>
 <body>
 </div>
-  <h1>jQuery Timespace Plugin Examples</h1>
-	<h2>24-Hour Timeline</h2>
 	<div id="timelineClock"></div>
-	<h2>Event Timeline</h2>
 	<div id="timeline"></div>
 <script>
 	$(function () {
-
-		$('#timelineClock').timespace({
-
-			// Set the time suffix function for displaying as '12 A.M.'
-			timeSuffixFunction: s => ' ' + s[0].toUpperCase() + '.' + s[1].toUpperCase() + '.',
-			selectedEvent: -1,
-			data: {
-				headings: [
-					{start: 0, end: 6, title: 'Night'},
-					{start: 6, end: 12, title: 'Morning'},
-					{start: 12, end: 18, title: 'Afternoon'},
-					{start: 18, end: 24, title: 'Evening'},
-				],
-				events: [
-					{start: 6.50, title: 'Breakfast', description: 'Eat a healthy breakfast.'},
-					{start: 8, end: 10, title: 'Walk', description: 'Go for a walk.'},
-					{start: 14, title: 'Lunch', description: 'Eat a healthy lunch.'},
-					{start: 14.75, title: 'Meeting', description: 'Meeting with Co-workers.'},
-				]
-			},
-
-		});
-
 		$('#timeline').timespace({
 
 			timeType: 'date',
 			useTimeSuffix: false,
-			startTime: 500,
-			endTime: 2050,
-			markerIncrement: 50,
+			startTime: 0,
+			endTime: 72,
+			markerIncrement: 1,
 			data: {
 				headings: [
-					{start: 500, end: 1750, title: 'Dark Ages'},
-					{start: 1750, end: 1917, title: 'Age of Revolution'},
-					{start: 1971, title: 'Information Age'},
+					{start: 0, end: 24, title: 'Freitag'},
+					{start: 25, end: 48, title: 'Samstag'},
+					{start: 49, title: 'Sonntag'},
 				],
 				events: [
-					{start: 1440, title: 'Gutenberg\'s Printing Press', width: 200},
-					{start: 1517, end: 1648, title: 'The Reformation',
+					{start: 15, title: 'Anreise', end: 17},
+					{start: 17, title: 'Begrüßung', end: 18},
+					{start: 18, title: 'Abendessen', end: 19},
+					{start: 19, title: 'Brainstorming', end: 21.15},
+					{start: 21.15, title: 'Vortrag und Diskussion', end: 23},
+					{start: 23, title: 'Bus fährt & Licht aus', end: 25},
+					{start: 24+8, title: 'Frühstück im Hostel', end: 24+9},
+					/*{start: 19, title: 'Fahrten zum, Theater', end: 21.15},
+					{start: 19, title: 'Start für alle', end: 21.15},
+					{start: 19, title: 'Gruppenfindung', end: 21.15},
+					{start: 23, end: 25, title: 'Lightningtalks',
 						description: $('<p>The Reformation was a turning point in the history of the world. '
 							+ 'Martin Luther was a key player in this event as he stood up against Papal tyranny '
 							+ 'and church apostasy.</p><p>Many other reformers followed in the steps of Luther '
 							+ 'and followed the convictions of their hearts, even unto death.</p>')},
-					{start: 1773, title: 'Boston Tea Party'},
-					{start: 1775, end: 1783, title: 'American Revolution', description: 'Description:', callback: function () {
+					{start: 26, title: 'Mittag',end},
+					{start: 44, end: 45, title: 'Lightningtalks', description: 'Description:', callback: function () {
 
 						this.container.find('.jqTimespaceDisplay section').append(
 							'<p>This description was brought to you by the callback function. For information on the American Revolution, '
@@ -71,9 +53,17 @@
 						);
 
 					}},
-					{start: 1789, title: 'French Revolution'},
-					{start: 1914, end: 1918, title: 'World War I', noDetails: true},
-					{start: 1929, end: 1939, title: 'Great Depression',
+					start: 26, title: 'Abendessen'},
+					{start: 15, title: 'Präsentationen üben', end: 17},
+					{start: 15, title: 'Bus fährt & Licht aus', end: 17},
+					{start: 15, title: 'Frühstück im Hostel', end: 17},
+					{start: 15, title: 'Fahrten zum, Theater', end: 17},
+					{start: 15, title: 'Start für alle', end: 17},
+					{start: 15, title: 'Alle Projekte fertig', end: 17},
+					{start: 15, title: 'Gäste und Presse eingetroffen', end: 17},
+					{start: 46, title: 'Präsentaion der Projekte'},
+					{start: 47, end: 49, title: 'Verabschiedung', noDetails: true},*/
+					{start: 50, end: 52, title: 'Abreise',
 						description: 'A period of global economic downturn. Many experienced unemployment and the basest poverty.'
 					},
 				]
