--- a/website/Timeline-Slider-jQuery-Timespace/example.html
+++ b/website/Timeline-Slider-jQuery-Timespace/example.html
@@ -35,35 +35,24 @@
 					{start: 19, title: 'Brainstorming', end: 21.15},
 					{start: 21.15, title: 'Vortrag und Diskussion', end: 23},
 					{start: 23, title: 'Bus fährt & Licht aus', end: 25},
-					{start: 24+8, title: 'Frühstück im Hostel', end: 24+9},
-					/*{start: 19, title: 'Fahrten zum, Theater', end: 21.15},
-					{start: 19, title: 'Start für alle', end: 21.15},
-					{start: 19, title: 'Gruppenfindung', end: 21.15},
-					{start: 23, end: 25, title: 'Lightningtalks',
-						description: $('<p>The Reformation was a turning point in the history of the world. '
-							+ 'Martin Luther was a key player in this event as he stood up against Papal tyranny '
-							+ 'and church apostasy.</p><p>Many other reformers followed in the steps of Luther '
-							+ 'and followed the convictions of their hearts, even unto death.</p>')},
-					{start: 26, title: 'Mittag',end},
-					{start: 44, end: 45, title: 'Lightningtalks', description: 'Description:', callback: function () {
-
-						this.container.find('.jqTimespaceDisplay section').append(
-							'<p>This description was brought to you by the callback function. For information on the American Revolution, '
-							+ '<a target="_blank" href="https://en.wikipedia.org/wiki/American_Revolution">visit the Wikipedia page.</a></p>'
-						);
-
-					}},
-					start: 26, title: 'Abendessen'},
-					{start: 15, title: 'Präsentationen üben', end: 17},
-					{start: 15, title: 'Bus fährt & Licht aus', end: 17},
-					{start: 15, title: 'Frühstück im Hostel', end: 17},
-					{start: 15, title: 'Fahrten zum, Theater', end: 17},
-					{start: 15, title: 'Start für alle', end: 17},
-					{start: 15, title: 'Alle Projekte fertig', end: 17},
-					{start: 15, title: 'Gäste und Presse eingetroffen', end: 17},
-					{start: 46, title: 'Präsentaion der Projekte'},
-					{start: 47, end: 49, title: 'Verabschiedung', noDetails: true},*/
-					{start: 50, end: 52, title: 'Abreise',
+					{start: 24+7, title: 'Frühstück im Hostel', end: 24+8},
+					{start: 24+8, title: 'Fahrten zum, Theater', end: 24+9},
+					{start: 24+9, title: 'Start für alle', end: 24+9.50},
+					{start: 24+9.50, title: 'Gruppenfindung', end: 24+12},
+					{start: 24+12, end: 24+13, title: 'Lightningtalks'},
+					{start: 24+13, title: 'Mittag',end: 24+14},
+					{start: 24+14, end: 24+18, title: 'Lightningtalks'},
+					{start: 24+18, title: 'Abendessen',end: 24+19},
+					{start: 24+19, title: 'Präsentationen üben', end: 24+23},
+					{start: 24+23, title: 'Bus fährt & Licht aus', end: 24+25},
+					{start: 24+24+7, title: 'Frühstück im Hostel', end: 24+24+8},
+					{start: 24+24+8, title: 'Fahrten zum, Theater', end: 24+24+9},
+					{start: 24+24+9, title: 'Start für alle', end: 24+24+11},
+					{start: 24+24+11, title: 'Alle Projekte fertig', end: 24+24+11.15},
+					{start: 24+24+11.15, title: 'Gäste und Presse eingetroffen', end: 24+24+11.30},
+					{start: 24+24+11.30, title: 'Präsentaion der Projekte',end:  24+24+14.30},
+					{start: 24+24+14.30, end: 24+24+14.45, title: 'Verabschiedung'},
+					{start: 24+24+14.45, end: 24+24+24, title: 'Abreise',
 						description: 'A period of global economic downturn. Many experienced unemployment and the basest poverty.'
 					},
 				]
