--- a/website/index.html
+++ b/website/index.html
@@ -58,7 +58,7 @@
                     <div class="network-name">
                         Instagram #jugendhackt
                     </div>
-                    <div id="latestPosts"></div>
+                    <div id="instaLatest"></div>
                 </div>
                 <div class="col-sm">
                     Hackdash
@@ -66,7 +66,10 @@
                     </iframe>
                 </div>
                 <div class="col-sm">
-                    Twitter
+                    <div class="network-name">
+                        Twitter #jugendhackt
+                    </div>
+                    <div id="twitterLatest"></div>
                 </div>
                 <div class="col-sm">
                     (Slack)
