--- a/website/index.html
+++ b/website/index.html
@@ -76,11 +76,11 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col">
+                <!-- <div class="col">
                     Timeline
                     <div id="timeline">
                     </div>
-                </div>
+                </div> -->
             </div>
         </section>
     </body>
