--- a/website/index.html
+++ b/website/index.html
@@ -9,12 +9,14 @@
             Jugend Dasht
         </title>
         <!-- Bootstrap core CSS -->
+
         <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
         <!-- Custom fonts for this template -->
         <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet"/>
         <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet"/>
         <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet"/>
         <!-- Custom styles for this template -->
+        <link href="css/twitter.css">
         <link href="css/index.css" rel="stylesheet"/>
         <link href="https://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
             <!-- Bootstrap core JavaScript -->
@@ -27,6 +29,15 @@
             </script>
             <script src="js/jquery.timespace.js">
             </script>
+            <!-- TWITTER -->
+            <script type="text/javascript" src="js/twitter_implementation.js"></script>
+            <script type="text/javascript" src="js/twitter.js"></script>
+            <script sync src="https://platform.twitter.com/widgets.js"></script>
+            <script>
+
+
+</script>
+
             <!-- Custom scripts for this template -->
             <script src="js/grayscale.js">
             </script>
