--- a/website/index.html
+++ b/website/index.html
@@ -27,17 +27,18 @@
             <!-- Plugin JavaScript -->
             <script src="vendor/jquery-easing/jquery.easing.min.js">
             </script>
+            <link href="https://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
+
+          	<link href="css/jquery.timespace.dark.css?v2" rel="stylesheet">
+          	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
             <script src="js/jquery.timespace.js">
             </script>
             <!-- TWITTER -->
             <script type="text/javascript" src="js/twitter_implementation.js"></script>
             <script type="text/javascript" src="js/twitter.js"></script>
             <script sync src="https://platform.twitter.com/widgets.js"></script>
-            <script>
-
-
-</script>
-
+            
             <!-- Custom scripts for this template -->
             <script src="js/grayscale.js">
             </script>
