--- a/website/index.html
+++ b/website/index.html
@@ -81,7 +81,7 @@
                     <div class="network-name">
                         Twitter #jugendhackt
                     </div>
-                    <div id="twitterLatest"></div>
+                    <div id="tweet"></div>
                 </div>
                 <div class="col-sm">
                     (Slack)
@@ -89,7 +89,7 @@
             </div>
             <div class="row">
                 <div class="col">
-                    
+
                     <div id="timeline">
                     </div>
                 </div>
