--- a/website/index.html
+++ b/website/index.html
@@ -82,6 +82,10 @@
                         Twitter #jugendhackt
                     </div>
                     <div id="tweet"></div>
+                    <div id="tweet"></div>
+                    <div id="tweet"></div>
+                    <div id="tweet"></div>
+                    <div id="tweet"></div>
                 </div>
                 <div class="col-sm">
                     (Slack)
