--- a/website/index.html
+++ b/website/index.html
@@ -81,11 +81,11 @@
                     <div class="network-name">
                         Twitter #jugendhackt
                     </div>
-                    <div id="tweet"></div>
-                    <div id="tweet"></div>
-                    <div id="tweet"></div>
-                    <div id="tweet"></div>
-                    <div id="tweet"></div>
+                    <div class="tweet"></div>
+                    <div class="tweet"></div>
+                    <div class="tweet"></div>
+                    <div class="tweet"></div>
+                    <div class="tweet"></div>
                 </div>
                 <div class="col-sm">
                     (Slack)
