--- a/website/index.html
+++ b/website/index.html
@@ -9,7 +9,6 @@
             Jugend Dasht
         </title>
         <!-- Bootstrap core CSS -->
-
         <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
         <!-- Custom fonts for this template -->
         <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet"/>
@@ -17,33 +16,37 @@
         <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet"/>
         <!-- Custom styles for this template -->
         <link href="css/twitter.css">
-        <link href="css/index.css" rel="stylesheet"/>
-        <link href="https://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
-            <!-- Bootstrap core JavaScript -->
-            <script src="vendor/jquery/jquery.min.js">
-            </script>
-            <script src="vendor/bootstrap/js/bootstrap.bundle.min.js">
-            </script>
-            <!-- Plugin JavaScript -->
-            <script src="vendor/jquery-easing/jquery.easing.min.js">
-            </script>
+            <link href="css/index.css" rel="stylesheet"/>
             <link href="https://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
-
-          	<link href="css/jquery.timespace.dark.css?v2" rel="stylesheet">
-          	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-            <script src="js/jquery.timespace.js">
-            </script>
-            <!-- TWITTER -->
-            <script type="text/javascript" src="js/twitter_implementation.js"></script>
-            <script type="text/javascript" src="js/twitter.js"></script>
-            <script sync src="https://platform.twitter.com/widgets.js"></script>
-
-            <!-- Custom scripts for this template -->
-            <script src="js/grayscale.js">
-            </script>
-            <script src="js/index.js">
-            </script>
+                <!-- Bootstrap core JavaScript -->
+                <script src="vendor/jquery/jquery.min.js">
+                </script>
+                <script src="vendor/bootstrap/js/bootstrap.bundle.min.js">
+                </script>
+                <!-- Plugin JavaScript -->
+                <script src="vendor/jquery-easing/jquery.easing.min.js">
+                </script>
+                <link href="https://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
+                    <link href="css/jquery.timespace.dark.css?v2" rel="stylesheet">
+                        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
+                        </script>
+                        <script src="js/jquery.timespace.js">
+                        </script>
+                        <!-- TWITTER -->
+                        <script src="js/twitter_implementation.js" type="text/javascript">
+                        </script>
+                        <script src="js/twitter.js" type="text/javascript">
+                        </script>
+                        <script src="https://platform.twitter.com/widgets.js" sync="">
+                        </script>
+                        <!-- Custom scripts for this template -->
+                        <script src="js/grayscale.js">
+                        </script>
+                        <script src="js/index.js">
+                        </script>
+                    </link>
+                </link>
+            </link>
         </link>
     </head>
     <body id="page-top">
@@ -70,7 +73,8 @@
                     <div class="network-name">
                         Instagram #jugendhackt
                     </div>
-                    <div id="instaLatest"></div>
+                    <div id="instaLatest">
+                    </div>
                 </div>
                 <div class="col-sm">
                     Hackdash
@@ -81,21 +85,20 @@
                     <div class="network-name">
                         Twitter #jugendhackt
                     </div>
-                    <div class="tweet"></div>
-                    <div class="tweet"></div>
-                    <div class="tweet"></div>
-                    <div class="tweet"></div>
-                    <div class="tweet"></div>
-                </div>
-                <div class="col-sm">
-                    (Slack)
+                    <div class="tweet">
+                    </div>
+                    <div class="tweet">
+                    </div>
+                    <div class="tweet">
+                    </div>
+                    <div class="tweet">
+                    </div>
+                    <div class="tweet">
+                    </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col">
-
-                    <div id="timeline">
-                    </div>
+            <div class="timeline-holder">
+                <div id="timeline">
                 </div>
             </div>
         </section>
