--- a/website/index.html
+++ b/website/index.html
@@ -57,6 +57,7 @@
                     <h1 class="mx-auto my-0 text-uppercase">
                         Jugend Dasht
                     </h1>
+                    <img src="img/logo.png"/>
                     <h2 class="text-white-50 mx-auto mt-2 mb-5">
                         Das Dashboard für Jugend Hackt
                     </h2>
